plugins/kotlin/idea/tests/testData/checker/codeFragments/classHeader.kt.fragment.k2
"" + <error descr="[UNRESOLVED_REFERENCE]">aaabbbccc</error> + aabbcc + this.toString()